# rag-feedback-analyzer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_understanding_embeddings.ipynb  02_vector_store_implementation.ipynb  03_simple_rag_pipeline.ipynb
src/: app.py  ingest_data.py
tests/: test_ingest.py
